tests/ui/imports/multiple-extern-by-macro-for-underscore.ed2015.stderr
error: expected identifier, found reserved identifier `_`
  --> $DIR/multiple-extern-by-macro-for-underscore.rs:18:11
   |
LL |     use ::_;
   |           ^ expected identifier, found reserved identifier

error: aborting due to 1 previous error

